--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function profLog() {
 }
 
 return (<header>
-  <logo>U<span>Mart</span></logo>
+  <logo>You<span>Market</span></logo>
   <div className="icons">
     <Link to="/"><i id="hico" className="far fa-home-lg-alt" /></Link>
     <Link to="/about"><i id="aico" className="far fa-store" /></Link>
@@ -223,7 +223,7 @@ window.ethereum.request({ method: 'eth_sendTransaction', params: [{
   from: user,
   to: addr,
   data: contract.methods.confirm(web3.utils.toWei("0.1","ether")).encodeABI()
-}] })
+}] }).then(() => {
 orders[i].status="true";
 const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(orders))})
 b.saveIPFS().then(() => {
@@ -240,6 +240,7 @@ return response.json().then((k) => {
   alert('Confirmed! Your order pin is - '+orders[i].secret)
   })
 })
+})
 } else {null}
 } else {null}
 }
@@ -252,7 +253,7 @@ window.ethereum.request({ method: 'eth_sendTransaction', params: [{
   from: user,
   to: addr,
   data: contract.methods.cancel(web3.utils.toWei("0.1","ether")).encodeABI()
-}] })
+}] }).then(() => {
 orders[i].status="cancelled";
 const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(orders))})
 b.saveIPFS().then(() => {
@@ -268,6 +269,7 @@ return response.json().then((k) => {
 })
   alert('Order Cancelled !')
   })
+})
 })
 } else {null}
 } else {null}
@@ -705,6 +707,13 @@ function formSubmit() {
 if(localStorage.getItem('name')!==""&&localStorage.getItem('p.no')!==""&&localStorage.getItem('c.p.no')!==""&&localStorage.getItem('p.no').length==10&&localStorage.getItem('p.no')==localStorage.getItem('c.p.no')&&localStorage.getItem('h.no')!==""&&localStorage.getItem('h.no')!==""&&localStorage.getItem('area')!==""&&localStorage.getItem('lmark')!==""&&localStorage.getItem('city')!==""&&localStorage.getItem('pin.no')!==""&&localStorage.getItem('pin.no').length==6&&localStorage.getItem('state')!==""&& localStorage.getItem('country')!=="" && products.filter(e => localStorage.getItem(e.id)!==null).length!==0){
   
 if(confirm('Confirm Order ?') === true) {
+  
+window.ethereum.request({ method: 'eth_sendTransaction', params: [{
+  from: user,
+  to: addr,
+  value: parseInt(web3.utils.toWei("0.1","ether")).toString(16),
+  data: contract.methods.pay().encodeABI()
+}] }).then(() => {
   orders.push({
   id : Date.now(),
   name : localStorage.getItem('name')+' ('+user.substr(0,5)+'....'+user.substr(-5)+')' ,
@@ -719,23 +728,15 @@ if(confirm('Confirm Order ?') === true) {
   secret: Date.now().toString().substr(-6)
   })
 
-window.ethereum.request({ method: 'eth_sendTransaction', params: [{
-  from: user,
-  to: addr,
-  value: parseInt(web3.utils.toWei("0.1","ether")).toString(16),
-  data: contract.methods.pay().encodeABI()
-}] })
-
 const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(orders))})
 b.saveIPFS().then(() => {
   db.doc('orders').set({   ipfs : b.ipfs()
-  }).then(async () => {
-
   }).then(() => {
   alert('order successfull!')
   })
 })
 
+})
 } else {null}
   
 } else {
