--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ return (<div>
 <Searcho/>
 
 <div className="banner">
-<h1>Shop your favourites with joy at <span>You Market</span></h1> 
-<p> Buy your favourite fashions now at You Market at low cost and free delivery. </p> 
+<h1>Shop your favourites with joy at <span>U Mart</span></h1> 
+<p> Buy your favourite products now at U Mart at low cost and free delivery. </p> 
 <button> Shop Now <i className="far fa-bags-shopping fa-spin"></i> </button>
 </div>
 
@@ -459,11 +459,11 @@ const About = () => {
   
 return (<div>
   
-<div className="h-head">About us - You Market</div>
+<div className="h-head">About us - U Mart</div>
 
 <div className="about">
   <img src={det[0].pic}/>
-  <p>Lorem Ipsum and <span className="span" >You Market</span> dolor sit amet, consectetur adipiscing elit. Sed faucibus tortor ac est scelerisque, id vulputate risus volutpat. Nunc porttitor felis elit, quis laoreet ipsum faucibus sed. Donec faucibus, neque et tincidunt molestie, ipsum lorem dignissim orci, at rutrum nibh neque nec ipsum. Mauris posuere vitae justo id consequat. <br/><br/>
+  <p>Lorem Ipsum and <span className="span" >U Mart</span> dolor sit amet, consectetur adipiscing elit. Sed faucibus tortor ac est scelerisque, id vulputate risus volutpat. Nunc porttitor felis elit, quis laoreet ipsum faucibus sed. Donec faucibus, neque et tincidunt molestie, ipsum lorem dignissim orci, at rutrum nibh neque nec ipsum. Mauris posuere vitae justo id consequat. <br/><br/>
     <span> <i className="far fa-building"/> {' '+det[0].sname}</span><br/><br/>
     <span> <i className="far fa-user"/>{' '+det[0].name}</span><br/><br/>
     <span> <i className="far fa-map-marker-alt"/>{' '+det[0].address}</span><br/><br/>
@@ -492,7 +492,7 @@ return (<div>
   <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Sed faucibus tortor ac est scelerisque, id vulputate risus volutpat. Nunc porttitor felis elit, quis laoreet ipsum faucibus sed. Donec faucibus, neque et tincidunt molestie, ipsum lorem dignissim orci, at rutrum nibh neque nec ipsum. Mauris posuere vitae justo id consequat.</p>
 </div>
 
-<div className="poweredBy"><i className="fas fa-bolt"></i> Powered By <span> Hindusthan Tech</span></div>
+<div className="poweredBy"><i className="fas fa-bolt"></i> Powered By <span> Santhosh Reddy</span></div>
 
 </div>)}
 
