--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ return (<div>
 <Searcho/>
 
 <div className="banner">
-<h1>Shop your favourites with joy at <span>U Mart</span></h1> 
+<h1>Shop your favourites with joy at <br/><span>U Mart</span></h1> 
 <p> Buy your favourite products now at U Mart at low cost and free delivery. </p> 
 <button> Shop Now <i className="far fa-bags-shopping fa-spin"></i> </button>
 </div>
