--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ return (<div>
 <div className="banner">
 <h1>Shop your favourites with joy at <br/><span>U Mart</span></h1> 
 <p> Buy your favourite products now at U Mart at low cost and free delivery. </p> 
-<button><a href="https://github.com/santhosh-reddy-6404/u-mart"> Shop Now </a><i className="far fa-bags-shopping fa-spin"></i> </button>
+<button><a href="https://github.com/santhosh-reddy-6404/u-mart"> Shop Now </a><i className="fa fa-github fa-spin"></i> </button>
 </div>
 
 <div className="productsH">
