--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ return response.json().then((k) => {
   setWishlist(k)
 })
 })
+alert(process.env.REACT_APP_API_KEY)
 }, [])
 
 //Authentication...
