--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, user-scalable=no"/>
   
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   
   <link rel="stylesheet"href="style.css"></link>
   
