--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ return (<div>
 </div>
 <div className="form2">
 
-  <label>Order Summary
+  <label id="orderSum">Order Summary
   <div className="PRODUCTS-X">
   {products.filter(product => localStorage.getItem(product.id) !== null).map(d => (
   <div className="product-x">
