--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ function profLog() {
 }
 
 return (<header>
-  <logo>You<span>Market</span></logo>
+  <logo>U<span>Mart</span></logo>
   <div className="icons">
     <Link to="/"><i id="hico" className="far fa-home-lg-alt" /></Link>
     <Link to="/about"><i id="aico" className="far fa-store" /></Link>
