--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(object))})
 b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
 })
-
+console.log(b.ipfs());
 } else {
 
 wishlist.push({
@@ -632,7 +632,7 @@ const b = new Moralis.File('i.json', {base64 : btoa(JSON.stringify(object))})
 b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
 })
-
+console.log(b.ipfs())
 }
 setWishlist(wlist)
 }
