--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@ useEffect(() => {
 function Wish() {
 
 setWiish(!wiish)
+alert("please wait until you get a success message...");
 
 if(wish === true) {
 
