--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ function Review() {
 
 if(document.getElementById('rname').value!==""&&document.getElementById('rreview').value!=="") {
 
-alert('Please wait until you get a success message...');
+alert('Please don't reload the page until you get a success message. You can continue your shopping...');
 
 reviews.push({
   name : document.getElementById('rname').value+' ('+user.substr(0,5)+'....'+user.substr(-5)+')',
