--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ const [wish, setWish] = useState(false)
 const [wishIcon, setWishIcon] = useState("far fa-heart")
 
 useEffect(() => {
-  if(JSON.stringify(wishlist.filter(e => e.user == user)).includes(id)) {
+  if(JSON.stringify(wlist.filter(e => e.user == user)).includes(id)) {
     setWish(true)
     setWishIcon("fas fa-heart")
   } else {
