--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ var i = wishlist.findIndex(e => e.user==user&& e.product==id)
 
 wishhlist.splice(i, i)
 
-var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
+var hash = CryptoJS.AES.encrypt(JSON.stringify(wishhlist), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
@@ -622,7 +622,7 @@ wishhlist.push({
   product : id
 })
 
-var hash = CryptoJS.AES.encrypt(JSON.stringify(wishlist), key, {
+var hash = CryptoJS.AES.encrypt(JSON.stringify(wishhlist), key, {
     iv: iv,
     mode: CryptoJS.mode.CBC,
     padding: CryptoJS.pad.Pkcs7
