--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@ return(<div className="PROFILE">
   <summary>
     <b>Order History</b>
     <div className="arrow">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down">
-				<polyline points="6 9 12 15 18 9"></polyline>
-			</svg>
-		</div>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down">
+	<polyline points="6 9 12 15 18 9"></polyline>
+      </svg>
+  </div>
   </summary>
   <div className="ORDERS">
   {orders.sort((a, b) => { return a.id - b.id; }).filter(e => e.ethAddress==user).reverse().map(d => (
@@ -612,7 +612,7 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("far fa-heart")
   setWlist(wishlist.filter(e=> e.user===user))
-  setWishhlist(wishhlist)
+  setWishhlist(wishlist)
 })
 
 } else {
@@ -635,7 +635,7 @@ b.saveIPFS().then(() => {
   db.doc('wishlist').set({ ipfs : b.ipfs() })
   setWishIcon("fas fa-heart")
   setWlist(wishlist.filter(e=> e.user===user))
-  setWishhlist(wishhlist)
+  setWishhlist(wishlist)
 })
 
 }
